--- a/miss.html
+++ b/miss.html
@@ -8,12 +8,28 @@
 </head>
 <body>
   <div id="container">
-    <h1>just missed earth</h1>
-    <h2>{{ca.object_name}} just missed earth</h2>
-    <div id="miss-detail">
-      details...
+    <div id="header">
+      <div id="header-accessories">
+        <p>Tracking all those objects flying around in space which just miss earth
+          (by scraping data from <a href="http://neo.jpl.nasa.gov/">NASA</a>).</p>
+        <p>Follow <a href="http://twitter.com/justmissedearth">@justmissedearth</a> or 
+          get the <a href="/feed">feed</a> for updates.</p>
+      </div>
+      <div id="header-title"><a href="/">just missed earth</a></div>
     </div>
-    <div id="footer"></div>
+    <h1>"{{ca.object_name}}" just missed earth...</h1>
+    <div id="miss-detail-container">
+      <p>Official Name: <span class="detail">{{ca.object_name}}</span></p>
+      <p>Approach Time: <span class="detail">{{ca.approach_date}} UTC</span></p>
+      <p>Estimated Diamater: <span class="detail">{{ca.estimated_diameter}} metres</span></p>
+      <p>Missed by: <span class="detail">{{ca.minimum_distance_away}} kilometres</span></p>
+      <p>Travelling at: <span class="detail">{{ca.relative_velocity}} kilometres per second</span></p>
+    </div>
+    <div id="footer">
+      Created on <a href="http://code.google.com/appengine/">Google App Engine</a> by
+      <a href="http://jdennes.github.com/">James Dennes</a> out of pure curiosity.
+      Code available on <a href="http://github.com/jdennes/justmissedearth-appengine">GitHub</a>.
+    </div>
   </div>
 </body>
 </html>
