--- a/miss.html
+++ b/miss.html
@@ -1,35 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-	<title>{{ca.object_name}} just missed earth</title>
-	<link rel="stylesheet" href="/css/jme.css" type="text/css" media="screen" />
-</head>
-<body>
-  <div id="container">
-    <div id="header">
-      <div id="header-accessories">
-        <p>Tracking all those objects flying around in space which just miss earth
-          (by scraping data from <a href="http://neo.jpl.nasa.gov/">NASA</a>).</p>
-        <p>Follow <a href="http://twitter.com/justmissedearth">@justmissedearth</a> or 
-          get the <a href="/feed">feed</a> for updates.</p>
-      </div>
-      <div id="header-title"><a href="/">just missed earth</a></div>
-    </div>
-    <h1>"{{ca.object_name}}" just missed earth...</h1>
-    <div id="miss-detail-container">
-      <p>Official Name: <span class="detail">{{ca.object_name}}</span></p>
-      <p>Approach Time: <span class="detail">{{ca.approach_date}} UTC</span></p>
-      <p>Estimated Diamater: <span class="detail">{{ca.estimated_diameter}} metres</span></p>
-      <p>Missed by: <span class="detail">{{ca.minimum_distance_away}} kilometres</span></p>
-      <p>Travelling at: <span class="detail">{{ca.relative_velocity}} kilometres per second</span></p>
-    </div>
-    <div id="footer">
-      Created on <a href="http://code.google.com/appengine/">Google App Engine</a> by
-      <a href="http://jdennes.github.com/">James Dennes</a> out of pure curiosity.
-      Code available on <a href="http://github.com/jdennes/justmissedearth-appengine">GitHub</a>.
-    </div>
-  </div>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}{{ca.object_name}} just missed earth{% endblock %}
+{% block content %}
+<h1>"{{ca.object_name}}" just missed earth...</h1>
+<div id="miss-detail-container">
+  <p>Official Name: <span class="detail">{{ca.object_name}}</span></p>
+  <p>Approach Time: <span class="detail">{{ca.approach_date}} UTC</span></p>
+  <p>Estimated Diamater: <span class="detail">{{ca.estimated_diameter}} metres</span></p>
+  <p>Missed by: <span class="detail">{{ca.minimum_distance_away}} kilometres</span></p>
+  <p>Travelling at: <span class="detail">{{ca.relative_velocity}} kilometres per second</span></p>
+</div>
+{% endblock %}
