Added main feed.

--- a/base.html
+++ b/base.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>{% block title %}just missed earth{% endblock %}</title>
 	<link rel="stylesheet" href="/css/jme.css" type="text/css" media="screen" />
+	{% block feed %}{% endblock %}
 </head>
 <body>
   <div id="container">
@@ -18,23 +19,6 @@
       <div id="header-title"><a href="/">just missed earth</a></div>
     </div>
     {% block content %}
-    <h1>The last {{fetch_count}} objects to just miss earth...</h1>
-    <div id="misses-container">
-    {% if close_approaches %}
-    <ul id="misses">
-      {% for ca in close_approaches %}
-      <li>
-        At <span class="detail">{{ca.approach_date}}</span> an object named <span class="detail">{{ca.object_name}}</span> 
-        with a diameter of <span class="detail">{{ca.estimated_diameter}} metres</span> <span class="justmissedearth">just missed earth</span>
-        by <span class="detail">{{ca.minimum_distance_away}} kilometres</span>!
-        <span class="miss-permalink"><a href="/misses/{{ ca.key }}">details</a></span>
-      </li>
-      {% endfor %}
-    </ul>
-    {% else %}
-      <div>Sorry, no near misses to display right now.</div>
-    {% endif %}
-    </div>
     {% endblock %}
     <div id="footer">
       Created on <a href="http://code.google.com/appengine/">Google App Engine</a> by
