Updated main view to display the maximum miss distance for all approaches shown.

--- a/main.html
+++ b/main.html
@@ -2,7 +2,7 @@
 
 {% block feed %}<link rel="alternate" type="application/rss+xml" title="RSS 2.0 Latest Misses" href="/feed" />{% endblock %}
 {% block content %}
-<h1>The last {{fetch_count}} objects to just miss earth...</h1>
+<h1>The last {{fetch_count}} objects to just miss earth by less than 3,840,000 kilometres...</h1>
 <div id="misses-container">
 {% if close_approaches %}
 <ul id="misses">
