Let app engine log scraping errors (mostly timeouts).

--- a/base.html
+++ b/base.html
@@ -22,7 +22,7 @@
     {% endblock %}
     <div id="footer">
       Created on <a href="http://code.google.com/appengine/">Google App Engine</a> by
-      <a href="http://jdennes.github.com/">James Dennes</a> out of pure curiosity.
+      <a href="http://jdennes.github.com/">James Dennes</a> out of pure fascination and curiosity.
       Code available on <a href="http://github.com/jdennes/justmissedearth-appengine">GitHub</a>.
     </div>
   </div>
